Writing readme + now we only have 1 input

--- a/Project_Copy/Readme
+++ b/Project_Copy/Readme
@@ -1,1 +1,9 @@
- 
+NotHards client to search multi and single agent levels!
+
+Compilation is done by running 'make' in this directory. The binary, called searcher, is created in the folder bin.
+Compilation tested on Arch linux and ubuntu.
+
+The client takes one input; the amount of memory in MB. We recommend running at 1500. Running it on the competition server would then be e.g.
+java -jar 
+
+
